# atompaw

./: CMakeLists.txt  README.md  config.h.cmake
cmake/: compilers.cmake  generate_config_h.cmake  generate_pkg_config.cmake  prevent_build_in_place.cmake
cmake/abi_check/: readme
cmake/iso_c_binding/: check.f90
src/: CMakeLists.txt  atompaw-config.cmake.in  atompaw.pc.in  pkginfo.f90.cmake
